--- a/assets/style.css
+++ b/assets/style.css
@@ -15,11 +15,20 @@ main {
 footer {
     grid-area: footer;
 }
-
+.desktop{
+    display: none;
+}
+@media (min-width:800px){
+    .mobile-nav{
+        display: none;
+    }
+    .desktop{
+        display: inline-flex;
+    }
+}
 .grid {
     display: grid;
     gap: 20px;
-    width: 100%;
     min-height: 100vh;
     grid-template-rows: auto 0.10fr 0.25fr auto;
     grid-template-areas: 'header'
@@ -32,7 +41,6 @@ footer {
         .grid {
             display: grid;
             gap: 10px;
-            width: 70%;
             min-height: 100vh;
             grid-template-rows: auto 0.25fr 1fr auto;
             grid-template-areas: 'header'
@@ -72,11 +80,18 @@ footer {
 /* grid for banner_bottom */
 .banner_bottom {
     display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
+    gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
 }
-
+@media (min-width:800px){
+    .banner_bottom {
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+    }
+}
 /* grid for main part */
 main {
     display: grid;
@@ -86,12 +101,12 @@ main {
 }
 
 @media (min-width:800px){
-   main {
-       display: grid;
-       grid-template-columns: repeat(4, 1fr);
-       grid-template-rows: 1fr 1fr;
-       gap: 20px;
-   }
+        main {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 1fr 1fr;
+            gap: 20px;
+        }
 }
 
 /* shadow for text in the banner */
@@ -121,7 +136,7 @@ footer {
 }
 .cards {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1fr;
 }
